# NymphCast

./: .editorconfig  .gitattributes  .gitignore  .install_linux.sh.swp  LICENSE  README.md  dependencies.sh  install_linux.sh  privacy_policy.md  release_notes.md  setup.sh  uninstall_linux.sh
.github/: FUNDING.yml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/NymphCastPlayer/: build.gradle  settings.gradle
android/NymphCastPlayer/app/: build.gradle
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
apps/hellocast/: hellocast.as
art/: idle_screen.kra  nymphcast_layout.psd  nymphcast_logo.ai  nymphcast_logo.psd
doc/: building_nymphcast_player.md  building_nymphcast_server.md  file_data_buffer_-_design_specification.md  haiku_build_notes.txt  nymphcast.xml  nymphcast_audio_alpine_linux_armv6_build_install.md  nymphcast_audio_setup_guide.md  nymphcast_gui_setup_guide.md  nymphcast_player_-_app_design_and_usage.md  nymphcast_requirements.txt  nymphcast_screensaver_setup_guide.md  nymphcast_server_android_build_steps.txt  nymphcast_testing_framework.md  nymphcast_v0.1_goals_and_testing_requirements.md  nymphcast_v0.2_goals_and_testing_requirements.md  nymphcast_video_setup_guide.md  v0.2-alpha0_release_protocol.txt
ffplay_cpp/: Makefile  audio_renderer.cpp  audio_renderer.h  main.cpp  main.cpp.bak  player.cpp  player.h  sarge.h  sdl_renderer.cpp  sdl_renderer.h  stream_handler.cpp  stream_handler.h  video_renderer.h
ms_sync/: Makefile  chronotrigger.h  ms_sync.cpp
player/: CMakeLists.txt
player/NymphCastPlayer/: CMakeLists.txt  NMakefile  NymphCastPlayer.pro  NymphCastPlayer.pro.user.4.9-pre1  Setup-NMake-vcpkg.bat  appbrowser.cpp  appbrowser.h  container_qpainter.cpp  custom_remotes.cpp  custom_remotes.h  custom_remotes.ui  default.css  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qml  mainwindow.ui  qlitehtml_global.h  remotes.cpp  remotes.h  remotes.ui  resources.qrc  version.pri
player/NymphCastPlayer/android/: AndroidManifest.xml  build.gradle
player/NymphCastPlayer/android/gradle/wrapper/: gradle-wrapper.properties
player/NymphCastPlayer/android/res/values/: libs.xml
player/NymphCastPlayer/android/res/xml/: network_security_config.xml
player/NymphCastPlayer/android/src/com/nyanko/nymphcastplayer/: MediaItem.java  NymphCast.java
player/NymphCastPlayer/css/: dark_teal.css  default.css
player/NymphCastPlayer/installer/: Setup-NymphCastPlayer-dynamic.iss  installer.nsi
player/NymphCastPlayer/litehtml/include/litehtml/: background.h  borders.h  box.h  css_margins.h  css_offsets.h  css_position.h  css_selector.h  document.h  el_anchor.h  el_base.h  el_before_after.h  el_body.h  el_break.h  el_cdata.h  el_comment.h  el_div.h  el_font.h  el_li.h  el_link.h  el_para.h  el_script.h  el_space.h  el_style.h  el_table.h  el_td.h  el_text.h  el_title.h  el_tr.h  element.h  html.h  html_tag.h  iterators.h  os_types.h  style.h  stylesheet.h  table.h  types.h  utf8_strings.h
player/NymphCastPlayer/litehtml/src/: css_selector.cpp  document.cpp  el_image.cpp  el_li.cpp  element.cpp  html_tag.cpp  media_query.cpp  num_cvt.cpp  style.cpp  stylesheet.cpp
player/playstore/: nymphcast_logo_no_text_512x512_effects.psd  nymphcast_player_feature_1024x500.psd
src/client/: Makefile  NMakefile  NymphCastClient.cpp  sarge.h  version  version.mk
src/client_lib/: Doxyfile  Makefile  bytebauble.cpp  nyansd.cpp  nymphcast_client.cpp  nymphcast_client.h  zeroconf-detail.hpp  zeroconf-util.hpp  zeroconf.hpp
src/pipewire_sink/: Makefile  module-nymphcast-discover.cpp  module-nymphcast-sink.cpp
src/server/: Makefile  NMakefile  NymphCastServer.cpp  Setup-NMake-vcpkg.bat  android.mk  audio_renderer.h  av_io.cpp  av_io.cpp.bak  av_io.h  av_io.h.bak  bytebauble.h  chronotrigger.cpp  chronotrigger.h  clock.h  cmdutils.c  config_parser.cpp  config_parser.h  databuffer.cpp  databuffer.h  decoder.cpp  decoder.h  es_systems.cfg  ffplay.cpp  ffplay.h  ffplaydummy.cpp  ffplaydummy.h  gui.cpp  gui.h  gui_event.cpp  gui_event.h  install.sh  mimetype.cpp  mimetype.h  nc_apps.cpp  nc_apps.h  ncs_valgrind.supp  nyansd.cpp  nyansd.h  nymphcast.service  nymphcast_audio_config.ini  (+20 more)
src/server/.emulationstation/: es_systems.cfg
src/server/android/: .gitignore  build.gradle  gradle.properties  settings.gradle
src/server/android/app/jni/SDL2_image/: Android.mk  IMG.c  IMG_ImageIO.m  IMG_WIC.c  IMG_avif.c  IMG_bmp.c  IMG_gif.c  IMG_jpg.c  IMG_jxl.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_pnm.c  IMG_qoi.c  IMG_stb.c  IMG_svg.c  IMG_tga.c  IMG_tif.c  IMG_webp.c  IMG_xcf.c  IMG_xpm.c  IMG_xv.c  IMG_xxx.c  Makefile.am  Makefile.in  Makefile.os2  README-versions.md  SDL2_image.pc.in  SDL2_image.spec.in  SDL2_imageConfig.cmake.in  SDL_image.h  aclocal.m4  configure  configure.ac  miniz.h  nanosvg.h  nanosvgrast.h  release_checklist.md  sdl2_image-config-version.cmake.in  sdl2_image-config.cmake.in  (+7 more)
src/server/android/app/jni/SDL2_image/acinclude/: tar.m4
src/server/android/app/jni/SDL2_image/cmake/: FindPrivateSDL2.cmake  Findwebp.cmake  PrivateSdlFunctions.cmake
src/server/android/app/jni/SDL2_image/cmake/test/: main.c
src/server/apps/: apps.html  apps.ini
src/server/assets/: index.rml  window.rml
src/server/autostart/: nymphcast_server.desktop
src/server/avahi/: install.sh  nymphcast.service
src/server/dlls/: dll_depends.sh
src/server/ffplay/: RenderInterfaceSDL2.cpp  RenderInterfaceSDL2.h  SystemInterfaceSDL2.cpp  SystemInterfaceSDL2.h  audio_renderer.cpp  audio_renderer.h  clock.cpp  cmdutils.c  cmdutils.c.bak  cmdutils.h  cmdutils.h.bak  config.h  decoder.cpp  decoder.h  ffplay.cpp  ffplay.h  frame_queue.cpp  (+12 more)
src/server/gui/core/nanosvg/: CMakeLists.txt  nanosvg.h  nanosvgrast.h
src/server/gui/core/nanosvg/src/: nanosvg_impl.cpp
src/test/: Makefile  test_databuffer.cpp  test_databuffer_mm.cpp  test_databuffer_multi_port.cpp  test_ffplay_local_file.cpp  test_file_seeking.sh  test_file_transfer.sh  test_screensaver.cpp  test_server.cpp
tools/: install_raspbian_img.sh
vlc_test/: Makefile  vlc_test.cpp
(+1314 files in other folders)
